force-app/main/default/objects/Account/fields/Action_Centre__c.field-meta.xml
<CustomField>
    <fullName>Action_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The action centre this nurse is assigned to</description>
    <label>Action Centre</label>
    <referenceTo>Action_Centre__c</referenceTo>
    <relationshipLabel>Nurses</relationshipLabel>
    <relationshipName>Nurses</relationshipName>
    <type>Lookup</type>
</CustomField>