force-app/main/default/objects/Account/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Geriatric</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>